# LAMBench

./: .pre-commit-config.yaml  README.md  pyproject.toml  test_print_report.py  test_print_report_functionality.py
.github/workflows/: cicd-ut.yml  run.yml
docs/: prefect_orchestration.md
examples/: orchestration_comparison.py
lambench/metrics/: direct_task_weights.yml  downstream_tasks_metrics.yml  generate_print_report.py  post_process.py  utils.py  visualization.py
lambench/metrics/results/: README.md  barplot.json  final_rankings.json  metadata.json  pc_barplot.json  print_report.html  radar.json  results.json  scatter.json
lambench/metrics/vishelper/: metrics_calculations.py  plot_generation.py  results_fetcher.py
lambench/models/: ase_models.py  basemodel.py  dp_models.py  models_config.yml
lambench/tasks/: base_task.py
lambench/tasks/calculator/: calculator_tasks.yml
lambench/tasks/calculator/binding/: binding.py
lambench/tasks/calculator/elastic/: elastic.py
lambench/tasks/calculator/inference_efficiency/: binary_search.py  efficiency_utils.py  inference_efficiency.py
lambench/tasks/calculator/interface/: interface.py
lambench/tasks/calculator/neb/: neb.py
lambench/tasks/calculator/pressure/: pressure.py
lambench/tasks/direct/: direct_tasks.py  direct_tasks.yml
lambench/tasks/finetune/: property_finetune.py
lambench/workflow/: dflow.py  entrypoint.py  prefect.py
tests/metrics/: conftest.py  test_metrics_calculator.py  test_post_process.py  test_utils_extra.py  test_visualization.py
tests/tasks/calculator/: test_efficiency_utils.py  test_inference_efficiency_extra.py  test_nve_md.py
tests/tasks/finetune/: test_property_finetune_utils.py
tests/workflow/: test_entrypoint.py  test_entrypoint_prefect.py  test_prefect.py
(+7 files in other folders)
