[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lambench"
version = "0.1.0"
dependencies = [
	"ase",
	"python-dotenv",
	"numpy",
	"scipy",
	"pydantic",
	"pyyaml",
	"SQLAlchemy[pymysql]",
	"tqdm",
	"dpdata @ git+https://github.com/deepmodeling/dpdata.git@devel#egg=dpdata",
	"pandas",
	"dftd3"
]

authors = [
  { name="DeepModeling"},
  { name = "Han Wang", email = "wang_han@iapcm.ac.cn" },
]

description = "Benchmarking of Large Atomic Models"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
deepmd = ["deepmd-kit==3.1.0", "torch>=2.1"]
fairchem = ["fairchem-core", "torch_geometric", "pyg_lib", "torch_scatter", "torch_sparse", "torch_cluster", "torch_spline_conv"] # See README
mace = ["mace-torch"]
mattersim = ["mattersim >= 1.1.1"]
orb = ["orb-models","pynanoflann@git+https://github.com/dwastberg/pynanoflann#egg=af434039ae14bedcbb838a7808924d6689274168"]
sevenn = ["sevenn"]
test = ["pytest", "pytest-cov"]
dflow = ["pydflow", "lbg"]
phonopy = ["phonopy@git+https://github.com/phonopy/phonopy.git", "scikit-learn"]


[project.urls]
Homepage = "https://github.com/deepmodeling/LAMBench"
Issues = "https://github.com/deepmodeling/LAMBench/issues"

[project.scripts]
lambench = "lambench.workflow.entrypoint:main"
postprocess = "lambench.metrics.post_process:main"
visualization = "lambench.metrics.visualization:main"

[tool.setuptools.packages.find]
include = ["lambench*"]

[tool.setuptools.package-data]
"*" = ["*.yml"]
